--- a/main.html
+++ b/main.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Why I Want to Become a Developer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <h1>Why I want to become a developer?</h1>
+    <p>
+        I want to become a software developer because I am passionate about creating solutions to real-world problems and transforming ideas into functional, user-friendly software. The world of technology constantly evolves, offering endless opportunities for innovation and creativity. Being a developer allows me to be at the forefront of this ever-changing field, where I can apply my problem-solving skills, logical thinking, and creativity to build applications that can make a positive impact on people's lives.
+    </p>
 </body>
-
 </html>
